<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/label_buy_amount"
        style="@style/OrderBook.Order.Label"
        app:layout_constraintHorizontal_weight="0.55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/label_buy_price"
        android:gravity="start"
        android:text="@string/titleBuyAmount"
        android:textColor="@color/colorGreen"/>

    <TextView
        android:id="@+id/label_buy_price"
        style="@style/OrderBook.Order.Label"
        app:layout_constraintHorizontal_weight="0.45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_buy_amount"
        app:layout_constraintEnd_toStartOf="@id/middle"
        android:gravity="center"
        android:text="@string/titleBuyPrice"
        android:textColor="@color/colorGreen"/>

    <TextView
        android:id="@+id/label_sell_price"
        style="@style/OrderBook.Order.Label"
        app:layout_constraintHorizontal_weight="0.45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/middle"
        app:layout_constraintEnd_toStartOf="@id/label_sell_amount"
        android:gravity="center"
        android:text="@string/titleSellPrice"
        android:textColor="@color/colorRed"/>

    <TextView
        android:id="@+id/label_sell_amount"
        style="@style/OrderBook.Order.Label"
        app:layout_constraintHorizontal_weight="0.55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_sell_price"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:text="@string/titleSellAmount"
        android:textColor="@color/colorRed"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:requiresFadingEdge="vertical"
        android:fadingEdge="horizontal"
        android:fadingEdgeLength="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/label_buy_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
